--- a/python-chatgpt/pyproject.toml
+++ b/python-chatgpt/pyproject.toml
@@ -2,7 +2,7 @@
 name = "python-chatgpt"
 version = "0.1.0"
 description = ""
-authors = ["Seungjoon Lee <joonlee0228@gmail.com>"]
+authors = ["Seungjoon Lee <altoformula@gmail.com>"]
 readme = "README.md"
 packages = [{include = "python_chatgpt"}]
 
